# AutonomousSegregation

./: .gitignore  README.md
AutonomousSegregation/: .project  AutoSegCC.rst  checks.rsa  representations.aird
AutonomousSegregation/csp-gen/sim/: file_AutoSegCC.csp  instantiations.csp
AutonomousSegregation/csp-gen/sim/defs/: CacheCons.csp  CacheConsC.csp  CacheConsS.csp  CacheConsS_coreassertions.csp  CachePointAssignment.csp  CachePointAssignment_coreassertions.csp  MoveManager.csp  MoveManager_coreassertions.csp  ObstacleAvoidance.csp  ObstacleAvoidance_coreassertions.csp  RandomWalk.csp  RandomWalk_coreassertions.csp  TargetWatch.csp  TargetWatch_coreassertions.csp  file_AutoSegCC.csp  file_AutoSegCC_defs.csp
CacheCons/: .project  CacheCons.rst  Mathematics.rst  checks.rsa
CacheCons/csp-gen/sim/: Mathematics.csp  instantiations.csp
CacheCons/csp-gen/sim/defs/: Mathematics.csp  Mathematics_defs.csp
Google Scholar Webscraper/: csvMerger.py  requirements.txt  scholarScraper.py
cachecons_ws/: README.md
cachecons_ws/src/cachecons_controller/: CMakeLists.txt  package.xml
cachecons_ws/src/cachecons_controller/include/: obstacle_avoidance_stm.hpp  obstacle_avoidance_stm_defs.hpp
cachecons_ws/src/cachecons_controller/src/: obstacle_avoidance.cpp  obstacle_avoidance_stm.cpp
cachecons_ws/src/cachecons_interfaces/: CMakeLists.txt  package.xml
cachecons_ws/src/cachecons_interfaces/msg/: VectorFloat2.msg
cachecons_ws/src/cachecons_launchers/: CMakeLists.txt  package.xml
cachecons_ws/src/cachecons_launchers/launch/: basic_launch.py  burger_launch.py
cachecons_ws/src/cachecons_launchers/params/r1/: turtlebot3_burger_bridge.yaml
cachecons_ws/src/cachecons_launchers/params/r2/: turtlebot3_burger_bridge.yaml
(+2 files in other folders)
